# GIS

1_Dokumentacja/: GIS-Dokumentacja-01.docx  GIS-Dokumentacja-02.docx  GIS-Dokumentacja-03.docx
1_Dokumentacja/dokumentacja/: annotated.html  class_console_application3_c_s_h_a_r_p_1_1_graph.html  class_console_application3_c_s_h_a_r_p_1_1_program.html  dir_01ea409c47c28a33733f28b88706212e.html  dir_4cf0fa9a4fff09f9ae81ed7b3e6a4f94.html  dir_6f134a6326ef4204a162e10d6d6d3032.html  dir_e2238d6f81736ef3f5c4ede77f942bd3.html  dir_f396504afdc959660871b003fa10164d.html  dir_f49524930172bf7ddb025c7cd3c3f2da.html  functions.html  functions_func.html  index.html  namespace_console_application3_c_s_h_a_r_p.html
1_Dokumentacja/dokumentacja/search/: all_0.js  all_1.js  all_4.js  classes_0.js  classes_1.js  functions_2.js  functions_3.js
1_Dokumentacja/testy/: 10.txt  10s.txt  15.txt  15s.txt  4.txt  4s.txt
2_Implementacja/ConsoleApplication3CSHARP/: ConsoleApplication3CSHARP.sln
2_Implementacja/ConsoleApplication3CSHARP/ConsoleApplication3CSHARP/: ConsoleApplication3CSHARP.csproj  GraphData.txt  Program.cs  README.txt
2_Implementacja/ConsoleApplication3CSHARP/doxygen_docs/: class_console_application3_c_s_h_a_r_p_1_1_graph-members.html  class_console_application3_c_s_h_a_r_p_1_1_program-members.html  classes.html  functions_vars.html  (+3 more)
2_Implementacja/GraphGenerator/: CMakeLists.txt
2_Implementacja/GraphGenerator/include/: Core.h  Core.h.in  Graph.h  GraphGenerator.h  Vertex.h
2_Implementacja/GraphGenerator/src/: Graph.cpp  GraphGenerator.cpp  Main.cpp  Vertex.cpp
(+8 files in other folders)
